<resources>
    <string name="app_name">Unija Challenge</string>
    <string name="open">Open Navigation</string>
    <string name="close">Close Navigation</string>
    <string name="home">Home</string>
    <string name="security">Security</string>
    <string name="profile">Profile</string>
    <string name="about">Account</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="my_documents">My documents</string>
    <string name="communication">Communication</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="settings">Settings</string>
    <string name="scan_image">Scan Image</string>
    <string name="converter_text">Image to text converter</string>
    <string name="copy">Copy</string>
    <string name="clear">Clear</string>
    <string name="utilities">Utilities</string>
    <string name="app_version">BETA-0.1</string>
    <string name="stay_logged_in">Stay Logged In</string>
    <string name="select_language">Select Language</string>
    <string name="title_activity_loading_screen">LoadingScreenActivity</string>
</resources>
