<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/security"
            android:icon="@drawable/security"
            android:title="@string/security" />
    </group>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/about"
                    android:icon="@drawable/account_circle"
                    android:title="@string/about"/>
                <item
                    android:id="@+id/upload"
                    android:icon="@drawable/cloud_upload"
                    android:title="@string/upload"/>
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/logout"
                    android:title="@string/logout"/>
                <item
                    android:id="@+id/documents"
                    android:icon="@drawable/documents"
                    android:title="@string/my_documents"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/communication">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/share"
                    android:icon="@drawable/share"
                    android:title="@string/share"/>
                <item
                    android:id="@+id/rate_us"
                    android:icon="@drawable/smile_rate_us"
                    android:title="@string/rate_us"/>
            </group>
        </menu>
    </item>

</menu>