<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageScanner">

    <ImageView
        android:id="@+id/scanner_picture"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_centerInParent="true"
        android:src="@drawable/scan"
        android:visibility="visible"
        android:background="@drawable/custom_scan_image" />

    <TextView
        android:id="@+id/convert_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/converter_text"
        android:textColor="#0578EB"
        android:fontFamily="sans-serif-light"
        android:visibility="visible"
        android:textStyle="bold|italic"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:layout_below="@id/scanner_picture"/>

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/utilities"/>

    <RelativeLayout
        android:id="@+id/utilities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:src="@drawable/camera_icon"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/clear_icon"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/copy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/copy_icon"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:maxLines="1"
                android:textAlignment="center" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>